# automata-theory

./: .gitignore  LICENSE
labs/lab1/: CMakeLists.txt  main.cpp
labs/lab1/src/dialogue/: CMakeLists.txt
labs/lab1/src/dialogue/include/: dialogue.hpp
labs/lab1/src/dialogue/source/: dialogue.cpp
labs/lab1/src/impls/: CMakeLists.txt
labs/lab1/src/impls/lex_version/flex/: lex_file.lex
labs/lab1/src/impls/lex_version/include/: lex_version.hpp
labs/lab1/src/impls/lex_version/source/: generated.cpp
labs/lab1/src/impls/regex_version/include/: regex_version.hpp
labs/lab1/src/impls/regex_version/source/: regex_version.cpp
labs/lab1/src/impls/smc_version/: ParserFSM.cpp  ParserFSM.h  lexer_context.h  parser.sm  parser_sm.cpp  parser_sm.h
labs/lab1/src/interfaces/: CMakeLists.txt
labs/lab1/src/interfaces/include/: i_lexer.hpp  i_recognizer.hpp
labs/lab1/src/parser/: CMakeLists.txt
labs/lab1/src/parser/include/: parser.hpp
labs/lab1/src/parser/source/: parser.cpp
labs/lab1/src/service/: CMakeLists.txt
labs/lab1/src/service/include/: service.hpp
labs/lab1/src/service/source/: service.cpp
labs/lab1/tests/: CMakeLists.txt  init_file.txt  tests.cpp
labs/lab1/timing/: CMakeLists.txt  main.cpp
labs/lab1/timing/files/: 1000.txt  10000.txt  100000.txt  20000.txt  30000.txt  40000.txt  5000.txt  50000.txt  60000.txt  70000.txt  80000.txt  90000.txt
labs/lab1/timing/time_results/: Timing_graphics.ods  lex.txt  regex.txt  smc.txt
labs/lab2/: empty.dot  lab2  main.go  test.dot
labs/lab2/pkg/dfa_pkg/: dfa_struct.go  difference_composition.go  difference_composition_test.go  invert.go  iterator_struct.go  kpath.go  kpath_test.go  mindfa_struct.go  mindfa_test.go  search_funcs.go
labs/lab2/pkg/dialogue_pkg/: dialogue.go
labs/lab2/pkg/graph_pkg/: graph_funcs.go
labs/lab2/pkg/kpath_pkg/: kpath.go
labs/lab2/pkg/nfa_pkg/: iterator.go  nfa_struct.go  search_funcs.go  search_test.go
labs/lab2/pkg/regex_pkg/: regex_struct.go
labs/lab2/pkg/test_pkg/: mindfa_test.go  operations_test.go  search_dfa_test.go  search_nfa_test.go
labs/lab3/: CMakeLists.txt  Makefile  RobotLexer.h  ast.hpp  diff_map.txt  interpreter.cpp  location.hh  main.cpp  map.txt  program.xml  robot  robot.tab.cpp  robot.tab.hpp  robot.ypp  robot_lexer.l
labs/lab3/checks/: unreached_commands.xml
labs/lab3/visualizer/: go.mod  main.go
lections/: lect1.txt
prep/: CMakeLists.txt  main.cpp  regex_info.txt
